--- a/src/html/gendec/css/design.css
+++ b/src/html/gendec/css/design.css
@@ -1,3 +1,146 @@
+@font-face {
+  font-family: 'Rawline Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Regular'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-400') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-400i') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Thin';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Thin'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-100') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Thin Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Thin Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-100i') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline ExtraLight';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline ExtraLight'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-200') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline ExtraLight Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline ExtraLight Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-200i') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Light';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Light'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-300') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Light Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Light Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-300i') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Medium';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Medium'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-500') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Medium Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Medium Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-500i') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline SemiBold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline SemiBold'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-600') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline SemiBold Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline SemiBold Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-600i') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Bold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Bold'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-700') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Bold Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Bold Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-700i') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline ExtraBold';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline ExtraBold'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-800') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline ExtraBold Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline ExtraBold Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-800i') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Black';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Black'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-900') format('ttf');
+  }
+  
+
+  @font-face {
+  font-family: 'Rawline Black Italic';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Rawline Black Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-900i') format('ttf');
+  }
+
 /* Style the tab */
 div.tab {
   overflow: hidden;
@@ -28,10 +171,26 @@ div.tab button.active {
 
 /* Style the tab content */
 .tabcontent {
-  display: none;
-  padding: 6px 12px;
+  /* display: none; */
+  padding: 15px;
   border: 1px solid #ccc;
-  border-top: none;
+  margin-bottom: 25px;
+}
+
+.fieldset-border {
+  border: 1px groove #ddd !important;
+  padding: 0 1.4em 1.4em 1.4em !important;
+  margin: 0 0 1.5em 0 !important;
+  -webkit-box-shadow: 0px 0px 0px 0px #000;
+  box-shadow: 0px 0px 0px 0px #000;
+}
+
+.fieldset-border .legend-border {
+  font-size: 1.4em !important;
+  text-align: left !important;
+  width: auto;
+  padding: 0 10px;
+  border-bottom: none;
 }
 
 .form-group {
@@ -49,3 +208,20 @@ div.tab button.active {
   flex: 1;
   padding: 0 15px; /* Adicione espaço entre as colunas, se necessário */
 }
+
+
+.secao {
+  border: 0.5px solid rgba(0, 0, 0, 0.2);
+  padding: 15px;
+  width: 1145px;
+  margin: auto; /* Define as margens como automáticas */
+}
+
+.label {
+  font-family: 'Rawline Regular', sans-serif;
+}
+
+.campo {
+  
+}
+
