--- a/src/html/siscaer/css/design.css
+++ b/src/html/siscaer/css/design.css
@@ -1037,6 +1037,7 @@
 
 .two-columns {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .column {
@@ -1052,7 +1053,38 @@
   margin: auto; /* Define as margens como automáticas */
 }
 
-.label {
+.form-group .label {
   font-family: 'Rawline Regular', sans-serif;
+  font-size: 12px;
+  display: inline-block;
+  width: 150px;
 }
+.icon-container {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip {
+  visibility: hidden;
+  width: 150px;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -75px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  font-size: 10px;
+}
+
+.icon-container:hover .tooltip {
+  visibility: visible;
+  opacity: 1;
+}
+
 
