Site siscaer - Quarta

--- a/src/html/siscaer/css/design.css
+++ b/src/html/siscaer/css/design.css
@@ -1408,3 +1408,16 @@
 
 /*# sourceMappingURL=tooltip.css.map*/
 
+/*.br-input {
+  width: 340px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+  padding: 7px;
+  display: block;
+  clear: left;
+  padding: 16px 20px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f1f1f1;
+}*/
+
