--- a/src/html/siscaer/css/design.css
+++ b/src/html/siscaer/css/design.css
@@ -1413,17 +1413,20 @@
   margin-bottom: 6px;
   padding: 7px;
   display: block;
-  clear: left;
-  padding: 16px 20px;
+  /*clear: left;*/
+  /*padding: 16px 20px;*/
   /*border: 2px solid #ccc;*/
   border-radius: 4px;
   /*background-color: #f1f1f1;*/
+  box-sizing: border-box;
 }
 
-.br-input input {
+/*.br-input input {
   width: 350px;
 }
 
 .br-input select {
-  max-width: 350px;
-}
+  max-width: 300px;
+}*/
+
+
