Modal que pergunta se é remessa conforme

--- a/src/html/remessas_internacionais/componentes/modal/remessa_conforme/remessa_conforme.css
+++ b/src/html/remessas_internacionais/componentes/modal/remessa_conforme/remessa_conforme.css
@@ -20,6 +20,11 @@
     width: 100%;
 }
 
+.modal-body {
+    margin-bottom: 15px;
+    text-align: justify;
+}
+
 .modal-header,
 .modal-body,
 .modal-footer {
