--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.css
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.css
@@ -56,3 +56,11 @@
 .br-input input{
   margin-top: 15px;
 }
+
+
+.container-acoes-remessa {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 30px;
+  margin-right: 30px;
+}
