--- a/src/html/remessas_internacionais/css/design.css
+++ b/src/html/remessas_internacionais/css/design.css
@@ -550,30 +550,17 @@ div.tab button.active {
 }
 
 
-
-.total-counter {
+br-cabecalho {
   position: fixed;
-  bottom: 90px;
-  right: 40px;
-  background-color: #ffffff;
-  color: #155BCB;
-  border: 2px solid #155BCB;
-  border-radius: 5px;
-  padding: 10px 20px;
-  font-size: 18px;
-  font-weight: bold;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
+  top: 0;
+  left: 0;
+  width: 100%;    
+  text-align: center;  
+  z-index: 1000; /* Garante que o cabeçalho fique acima de outros elementos */
 }
 
-.sum-display {
-  position: fixed;
-  top: 50%;
-  right: 100px; /* Ajuste para posicionar corretamente ao lado do ícone */
-  transform: translateY(-50%);
-  font-size: 16px;
-  color: #155BCB;
-  font-weight: bold;
-  transition: opacity 0.3s ease-in-out;
-  opacity: 0; /* Começa oculto */
+main {
+  margin-top: 120px; /* Espaço para o cabeçalho fixo */
+  padding: 20px;
 }
+
