--- a/src/html/remessas_internacionais/componentes/modal/remessa_conforme/remessa_conforme.css
+++ b/src/html/remessas_internacionais/componentes/modal/remessa_conforme/remessa_conforme.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: black;    
+    background: rgba(0, 0, 0, 0.90);
     justify-content: center;
     align-items: center;
     z-index: 9999; /* Alta prioridade para ficar acima de todos os elementos */
