--- a/src/html/gendec/css/design.css
+++ b/src/html/gendec/css/design.css
@@ -2,7 +2,7 @@
   font-family: 'Rawline Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Regular'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-400') format('ttf');
+  src: local('Rawline Regular'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-400') format('ttf');
   }
   
 
@@ -10,7 +10,7 @@
   font-family: 'Rawline Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-400i') format('ttf');
+  src: local('Rawline Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-400i') format('ttf');
   }
   
 
@@ -18,7 +18,7 @@
   font-family: 'Rawline Thin';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Thin'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-100') format('ttf');
+  src: local('Rawline Thin'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-100') format('ttf');
   }
   
 
@@ -26,7 +26,7 @@
   font-family: 'Rawline Thin Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Thin Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-100i') format('ttf');
+  src: local('Rawline Thin Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-100i') format('ttf');
   }
   
 
@@ -34,7 +34,7 @@
   font-family: 'Rawline ExtraLight';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline ExtraLight'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-200') format('ttf');
+  src: local('Rawline ExtraLight'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-200') format('ttf');
   }
   
 
@@ -42,7 +42,7 @@
   font-family: 'Rawline ExtraLight Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline ExtraLight Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-200i') format('ttf');
+  src: local('Rawline ExtraLight Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-200i') format('ttf');
   }
   
 
@@ -50,7 +50,7 @@
   font-family: 'Rawline Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Light'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-300') format('ttf');
+  src: local('Rawline Light'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-300') format('ttf');
   }
   
 
@@ -58,7 +58,7 @@
   font-family: 'Rawline Light Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Light Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-300i') format('ttf');
+  src: local('Rawline Light Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-300i') format('ttf');
   }
   
 
@@ -66,7 +66,7 @@
   font-family: 'Rawline Medium';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Medium'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-500') format('ttf');
+  src: local('Rawline Medium'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-500') format('ttf');
   }
   
 
@@ -74,7 +74,7 @@
   font-family: 'Rawline Medium Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Medium Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-500i') format('ttf');
+  src: local('Rawline Medium Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-500i') format('ttf');
   }
   
 
@@ -82,7 +82,7 @@
   font-family: 'Rawline SemiBold';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline SemiBold'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-600') format('ttf');
+  src: local('Rawline SemiBold'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-600') format('ttf');
   }
   
 
@@ -90,7 +90,7 @@
   font-family: 'Rawline SemiBold Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline SemiBold Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-600i') format('ttf');
+  src: local('Rawline SemiBold Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-600i') format('ttf');
   }
   
 
@@ -98,7 +98,7 @@
   font-family: 'Rawline Bold';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Bold'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-700') format('ttf');
+  src: local('Rawline Bold'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-700') format('ttf');
   }
   
 
@@ -106,7 +106,7 @@
   font-family: 'Rawline Bold Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Bold Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-700i') format('ttf');
+  src: local('Rawline Bold Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-700i') format('ttf');
   }
   
 
@@ -114,7 +114,7 @@
   font-family: 'Rawline ExtraBold';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline ExtraBold'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-800') format('ttf');
+  src: local('Rawline ExtraBold'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-800') format('ttf');
   }
   
 
@@ -122,7 +122,7 @@
   font-family: 'Rawline ExtraBold Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline ExtraBold Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-800i') format('ttf');
+  src: local('Rawline ExtraBold Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-800i') format('ttf');
   }
   
 
@@ -130,7 +130,7 @@
   font-family: 'Rawline Black';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Black'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-900') format('ttf');
+  src: local('Rawline Black'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-900') format('ttf');
   }
   
 
@@ -138,7 +138,7 @@
   font-family: 'Rawline Black Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Rawline Black Italic'), url('../../bibliotecas/Fontes\ -\ Rawline/rawline-900i') format('ttf');
+  src: local('Rawline Black Italic'), url('../bibliotecas/Fontes\ -\ Rawline/rawline-900i') format('ttf');
   }
 
 /* Style the tab */
