--- a/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.css
+++ b/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.css
@@ -1,8 +1,4 @@
 
-
-.card-content {      
-}
-
 .flex-container {
   display: flex;
   justify-content: space-between;
@@ -36,68 +32,15 @@
   padding-top: 10px;
 }
 
-#sum-value {
-}
-
 #valor_cotacao_dolar{
   width: 60px;
   text-align: right;
 }
 
 
-/* Tirar daqui para baixo - "Interferência" com o CSS do dados_remessa
+/* Tirar daqui para baixo - "Interferência" com o CSS do dados_remessa */
 
-.valor-remessa{
-  height: 165px;
-  margin-bottom: 30px;
-  text-align: center;
-  justify-content: center;
-  justify-self: center;
-  align-items: center;   
-}
-
-.campos-calculados [disabled]{
-display: flex;
-}
-
-.row {
+.painel_informacoes > .row{
 display: flex;
 flex-direction: column;
-}
-.coluna-row {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-gap: 1rem;
-}
-.coluna-input {
-flex: 1 1 45%;
-max-width: 45%;
-}
-
-.br-input label{
-text-align: center;
-justify-content: center;
-justify-self: center;
-align-items: center;
-}
-
-.br-input input{
-text-align: center;
-justify-content: center;
-justify-self: center;
-align-items: center;
-}
-
-
-.br-input input{
-margin-top: 15px;
-}
-
-
-.container-acoes-remessa {
-display: flex;
-justify-content: flex-end;
-margin-top: 30px;
-margin-right: 30px;
 }
