Alinhamento, estruturação, separação dos CSS informados, botões

--- a/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.css
+++ b/src/html/remessas_internacionais/componentes/lista_remessas/dados_remessa/dados_remessa.css
@@ -41,7 +41,7 @@ flex-direction: none;
   
 }
 
-@media (max-width: 650px) {
+@media (min-width: 398px) and (max-width: 650px) {
   .valor-remessa::after {
     content: "";
     display: block;
