Corrigindo repetição do texto para mobile no painel de informações

--- a/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.css
+++ b/src/html/remessas_internacionais/componentes/painel_informacoes/painel_informacoes.css
@@ -49,6 +49,7 @@ flex-direction: column;
 
 @media (max-width: 397px) {
 
+/*
   .atualizar_dolar_label,
   #valor_cotacao_dolar,
   #remessa_conforme,
@@ -77,5 +78,5 @@ flex-direction: column;
     content: "do dólar aqui: R$ ";
     display: block;
   }
-
+*/
 }
