Javascript da nova versão funcionando

--- a/src/html/remessas_internacionais novo/componentes/calculadora_compras/calculadora_compras.css
+++ b/src/html/remessas_internacionais novo/componentes/calculadora_compras/calculadora_compras.css
@@ -3,6 +3,10 @@ display: flex;
 flex-direction: none;
 }
 
+.container-total-remessa{
+  margin-bottom: 15px;
+}
+
 .campo-oculto{
   display: none;
 }
