--- a/src/html/remessas_internacionais_v2/componentes/calculadora_compras/calculadora_compras.css
+++ b/src/html/remessas_internacionais_v2/componentes/calculadora_compras/calculadora_compras.css
@@ -44,11 +44,19 @@ flex-direction: none;
   font-size: 25px;
 }
 
-.card-total,
-.input-highlight input,
-.br-input > .total-remessa{
+.sem-remessa-conforme{
+  background-color: #FFF5C2;
+}
+
+.com-remessa-conforme{
+  background-color: #DDF9C7;
+}
+
+.remessa-conforme-inativo{
   background-color: #F8F8F8;
 }
+
+
 
 
 .br-input > .campos-calculados{
@@ -112,61 +120,11 @@ flex-direction: none;
 }
 
 .container-acoes-remessa {
-display: flex;
-text-align: end;
-justify-content: flex-end;
-justify-self: flex-end;
-align-items: flex-end;
-margin-top: 30px;
-margin-right: 30px;
+  display: flex;
+  text-align: end;
+  justify-content: flex-end;
+  justify-self: flex-end;
+  align-items: flex-end;
+  margin-top: 30px;
+  margin-right: 30px;
 } 
-
-/*
-.valor-remessa{
-  height: 165px;
-  margin-bottom: 30px;
-  text-align: center;
-  justify-content: center;
-  justify-self: center;
-  align-items: center;   
-}
-
-.campos-calculados [disabled]{
-display: flex;
-}
-
-
-.coluna-row {
-display: flex;
-flex-direction: row;
-flex-wrap: wrap;
-gap: 1rem;
-}
-.coluna-input {
-flex: 1 1 45%;
-max-width: 45%;
-}
-
-.br-input label{
-text-align: center;
-justify-content: center;
-justify-self: center;
-align-items: center;
-}
-
-.br-input input{
-text-align: center;
-justify-content: center;
-justify-self: center;
-align-items: center;
-}
-
-
-.br-input input{
-margin-top: 15px;
-}
-
-
-
-
-*/
