Refinando os espaçamentos e alinhamentos

--- a/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.css
+++ b/src/html/remessas_internacionais_v3/componentes/calculadora_compras/calculadora_compras.css
@@ -64,6 +64,23 @@ flex-direction: none;
   padding: 0; /* Remove qualquer padding indesejado */
 }
 
+.left-aligned-label-mobile{
+  display: none;
+}
+
+@media (max-width: 991px) {
+  .left-aligned-label{
+    display: none;
+  }
+
+  .left-aligned-label-mobile{
+    text-align: left;
+    display: block; /* Certifica-se de que o label ocupa a largura total disponível */
+    margin: 0; /* Remove qualquer margem indesejada */
+    padding: 0; /* Remove qualquer padding indesejado */
+  }
+}
+
 .br-input > .campos-calculados{
   border: none;
   background-color: none;
