--- a/src/html/siscaer/css/design.css
+++ b/src/html/siscaer/css/design.css
@@ -899,6 +899,7 @@
   font-size: 14px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 } */
+ /* Estilos específicos para rótulos dentro de .form-group */
 .form-group .label {
   font-family: 'Rawline Regular', sans-serif;
   font-size: 14px;
@@ -906,11 +907,12 @@
   width: auto;
   margin-bottom: 4px;
 }
+/* Estilo para contêiner de ícones */
 .icon-container {
   position: absolute;
   display: inline-block;
 }
-
+/* Estilo para tooltips */
 .tooltip {
   visibility: hidden;
   width: 150px;
@@ -929,17 +931,17 @@
   font-size: 10px;
   display: inline-block;
 }
-
+/* Mostra o tooltip ao passar o mouse sobre o contêiner do ícone */
 .icon-container:hover .tooltip {
   visibility: visible;
   opacity: 1;
 }
-
+/* Estilo para fieldsets personalizados */
 .fieldset {
   border: --surface-width-none;
   margin-bottom: --spacing-scale-5x;
 }
-
+/* Estilo para seções de referência */
 .referencias,
 .referencias2 {
   width: 100%;
@@ -986,7 +988,7 @@
   color: inherit;
   text-align: left;
 }
-
+/* Estilo para rótulos e botões de opção (radio) em formulários */
 .form-group label,
 .form-group input[type="radio"] {
     display: inline-block;
@@ -1025,7 +1027,7 @@
   border-color: black transparent transparent transparent;
 }
 
-/* Show the tooltip text when you mouse over the tooltip container */
+/* Mostra o texto do tooltip ao passar o mouse */
 .tooltip:hover .tooltiptext {
   visibility: visible;
 }
