--- a/src/html/siscaer/css/design.css
+++ b/src/html/siscaer/css/design.css
@@ -835,13 +835,18 @@
 .tab-btn:hover {
   background-color: #a5b4fc;
 }
-/* Estilo para fieldset com borda personalizada */
+/* Estilo para fieldset com borda personalizada (input) */
 .fieldset-border {
   border: 1px groove #ddd !important;
   padding: 0 1.4em 1.4em 1.4em !important;
   margin: 0 0 1.5em 0 !important;
   -webkit-box-shadow: 0px 0px 0px 0px #000;
   box-shadow: 0px 0px 0px 0px #000;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  outline: none;
 }
 /* Estilo para legendas de fieldset */
 .fieldset-border .legend-border {
@@ -884,6 +889,13 @@
 
 .label {
   font-family: 'Rawline Regular', sans-serif;
+  font-size: 15px !important;
+  font-weight: 550;
+  text-align: left !important;
+  width: auto;
+  margin-bottom: 0px;
+  border-bottom: none;
+  color: #333333;
 }
 /* Estilo para controles de formulário */
 /* .form-control {
@@ -1286,14 +1298,17 @@
   font-weight: bold;
   margin-bottom: 5px;
 }
-.br-input input,
+
+/* .br-input input,
 .br-input select {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ced4da;
+  border: 1px groove #ddd;
   border-radius: 5px;
   font-size: 16px;
   outline: none;
-}
+  -webkit-box-shadow: 0px 0px 0px 0px #000;
+  box-shadow: 0px 0px 0px 0px #000;
+} */
 
 
